--- a/BuchLeaflet/presentation/index.html
+++ b/BuchLeaflet/presentation/index.html
@@ -291,7 +291,7 @@
 							</tr>
 						</tbody>
 					</table>
-					<small>Die vollständige Tabelle findet Ihr unter der Adresse <a target="_blank" href="http://wiki.openstreetmap.org/wiki/Zoom_levels">http://wiki.openstreetmap.org/wiki/Zoom_levels</a>.</small>
+					<small><a target="_blank" href="http://wiki.openstreetmap.org/wiki/Zoom_levels">http://wiki.openstreetmap.org/wiki/Zoom_levels</a>.</small>
 					</section>
 					<section>
 						<table>
