--- a/BuchLeaflet/presentation/index.html
+++ b/BuchLeaflet/presentation/index.html
@@ -60,11 +60,10 @@
 						Teil 1
 					</section>
 					<section>
-						<p>In diesem Teil werden wir ...</p>
+						<p>Ausblick</p>
 						<ul>
-							<li class="fragment">Karte erstelle</li>
-							<li class="fragment">Geografische Koordinaten</li>
-							<li class="fragment">Kartenkacheln</li>
+							<li class="fragment">Eine Karte erstellen</li>
+							<li class="fragment">Kartenkacheln - Kartenbilder</li>
 						</ul>
 					</section>
 
@@ -279,7 +278,6 @@
 							</tr>
 						</tbody>
 					</table>
-					<small><a target="_blank" href="http://wiki.openstreetmap.org/wiki/Zoom_levels">http://wiki.openstreetmap.org/wiki/Zoom_levels</a>.</small>
 					</section>
 					<section>
 						<table>
@@ -346,11 +344,11 @@
 						<img data-src="../994.png">
 					</section>
 					<section>
-						<p>In diesem Teil haben wir ...</p>
+						<p>Resümee</p>
 						<ul>
-							<li class="fragment">Als erstes haben wir mit 5 Zeilen Code eine Karte erstellt</li>
-							<li class="fragment">Wir haben uns geografische Koordinaten genauer angesehen </li>
-							<li class="fragment">und wir wissen nun wie Karten erstellt werden.</li>
+							<li class="fragment">Eine Leaflet-Karte</li>
+							<li class="fragment">Kartenkacheln - Kartenbilder</li>
+							<li class="fragment">Fragen?</li>
 						</ul>
 					</section>
 				</section>
@@ -374,9 +372,9 @@
 					</h2>
 					</section>
 					<section>
-						<p>In diesem Teil werden wir ...</p>
+						<p>Ausblick</p>
 						<ul>
-							<li class="fragment">die verschiedenen Leaflet-Objekt voneinander abgrenzen.</li>
+							<li class="fragment">Geodaten in Leaflet</li>
 						</ul>
 					</section>
 					<section>
@@ -602,8 +600,8 @@
 										<mark>[</mark>
 										[[50.17264, -7.26469],
 										[49.27264, -7.26469],
-										[49.27264, -6.26469]],
-										[[50.37264, -7.26469],
+										[49.27264, -6.26469]<mark>]</mark>,
+										<mark>[</mark>[50.37264, -7.26469],
 										[51.27264, -7.26469],
 										[51.27264, -8.26469]]
 										<mark>]</mark>,
@@ -739,9 +737,10 @@
 						</table>
 					</section>
 					<section>
-						<p>In diesem Teil haben wir ...</p>
+						<p>Resümee</p>
 						<ul>
-							<li class="fragment">die wichtigsten Leaflet-Objekt voneinander abgegrenzt.</li>
+							<li class="fragment">Geodaten in Leaflet</li>
+							<li class="fragment">Fragen?</li>
 						</ul>
 					</section>
 				</section>
@@ -762,7 +761,7 @@
 					</h2>
 					</section>
 					<section>
-						<p>In diesem Teil werden wir ...</p>
+						<p>Ausblick</p>
 						<ul>
 							<li class="fragment">GeoJSON allgemein</li>
 							<li class="fragment">GeoJSON Objekte</li>
@@ -1173,11 +1172,12 @@
 						</table>
 						</section>
 					<section>
-						<p>In diesem Teil haben wir ...</p>
+						<p>Resümee</p>
 						<ul>
 							<li class="fragment">GeoJSON allgemein</li>
 							<li class="fragment">GeoJSON Objekte</li>
 							<li class="fragment">GeoJSON in Leaflet</li>
+							<li class="fragment">Fragen?</li>
 						</ul>
 					</section>
 				</section>
@@ -1206,7 +1206,7 @@
 					</h2>
 					</section>
 					<section>
-						<p>In diesem Teil werden wir ...</p>
+						<p>Ausblick</p>
 						<ul>
 							<li class="fragment">Benutzerdefinierten Marker</li>
 							<li class="fragment">Vererbung</li>
@@ -1477,11 +1477,12 @@
 						</table>
 					</section>
 					<section>
-						<p>In diesem Teil haben wir ...</p>
+						<p>Resümee</p>
 						<ul>
 							<li class="fragment">Benutzerdefinierten Marker</li>
 							<li class="fragment">Vererbung</li>
 							<li class="fragment">Plugins</li>
+							<li class="fragment">Fragen?</li>
 						</ul>
 					</section>
 				</section>
@@ -1511,10 +1512,10 @@
 						</h2>
 					</section>
 					<section>
-						<p>In diesem Teil werden wir den ...</p>
+						<p>Ausblick</p>
 						<ul>
 							<li class="fragment">ESRI (Environmental Systems Research Institute) Service <b>Geocoding</b> ansehen.</li>
-							<li class="fragment">Leaflet Routing Machine</li>
+							<li class="fragment">Plugin Leaflet Routing Machine</li>
 						</ul>
 					</section>
 					<section>
@@ -1826,9 +1827,10 @@
 					</section>
 
 					<section>
-						<p>In diesem Teil haben wir den ...</p>
+						<p>Resümee</p>
 						<ul>
-							<li>... Geocoding und Routing Plugins angesehen.</li>
+							<li class="fragment">Geocoding und Routing Plugins angesehen.</li>
+							<li class="fragment">Fragen?</li>
 						</ul>
 					</section>
 				</section>
