--- a/BuchLeaflet/presentation/index.html
+++ b/BuchLeaflet/presentation/index.html
@@ -60,7 +60,7 @@
 						Teil 1
 					</section>
 					<section>
-						<p>Ausblick</p>
+						<p>Gliederung</p>
 						<ul>
 							<li class="fragment">Eine Karte erstellen</li>
 							<li class="fragment">Kartenkacheln - Kartenbilder</li>
@@ -372,7 +372,7 @@
 					</h2>
 					</section>
 					<section>
-						<p>Ausblick</p>
+						<p>Gliederung</p>
 						<ul>
 							<li class="fragment">Geodaten in Leaflet</li>
 						</ul>
@@ -700,7 +700,7 @@
 						</table>
 					</section>
 					<section>
-						<p title="979">Ein FeatureGroup</p>
+						<p title="979">Eine FeatureGroup</p>
 						<table>
 							<tr>
 								<td>
@@ -761,7 +761,7 @@
 					</h2>
 					</section>
 					<section>
-						<p>Ausblick</p>
+						<p>Gliederung</p>
 						<ul>
 							<li class="fragment">GeoJSON allgemein</li>
 							<li class="fragment">GeoJSON Objekte</li>
@@ -1139,9 +1139,9 @@
 					</h2>
 					</section>
 					<section>
-						<p>Ausblick</p>
+						<p>Gliederung</p>
 						<ul>
-							<li class="fragment">Benutzerdefinierten Marker</li>
+							<li class="fragment">Benutzerdefinierte Marker</li>
 							<li class="fragment">Vererbung</li>
 							<li class="fragment">Plugins</li>
 						</ul>
@@ -1445,7 +1445,7 @@
 						</h2>
 					</section>
 					<section>
-						<p>Ausblick</p>
+						<p>Gliederung</p>
 						<ul>
 							<li class="fragment">ESRI (Environmental Systems Research Institute) Service <b>Geocoding</b> ansehen.</li>
 							<li class="fragment">Plugin Leaflet Routing Machine</li>
@@ -1805,7 +1805,7 @@
 								Geodaten in <b>Leaflet</b> und <b>GeoJSON</b>
 							</small><br>
 							<small class="fragment">
-								Benutzerdefinierte Markern
+								Benutzerdefinierte Marker
 							</small><br>
 							<small class="fragment">
 								Geocoding und Routing
