--- a/BuchLeaflet/code/5/index_938.html
+++ b/BuchLeaflet/code/5/index_938.html
@@ -16,7 +16,7 @@ var mymap = L.map('mapid', {doubleClickZoom:false}).setView([50.97264, 7.00469],
 L.esri.basemapLayer('Gray').addTo(mymap);
 var searchControl = L.esri.Geocoding.geosearch().addTo(mymap);
 var results = L.layerGroup().addTo(mymap);
-searchControl.on("results", function(data) {
+searchControl.on('results', function(data) {
 results.clearLayers();
 for (var i = data.results.length - 1; i >= 0; i--) {
 results.addLayer(L.marker(data.results[i].latlng));
